# tinghook-project

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml  prd.txt
.agents/: SKILLS.md
.agents/skills/feature-planning/: SKILL.md
.agents/skills/let-him-cook/: SKILL.md
.agents/skills/plan-to-beads/: SKILL.md
.agents/skills/roast-it/: SKILL.md
.agents/skills/shake-it/: SKILL.md
.agents/skills/ship-it/: SKILL.md
.beads/: issues.jsonl
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  websocket_client.cpp
android/app/src/main/cpp/include/: json_utils.h  tinghook_engine.h  websocket_client.h
android/gradle/: libs.versions.toml
backend/: .env.example  Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/handlers/: auth_handler.go  log_handler.go  routes.go  rule_handler.go  sms_handler.go  ws_handler.go
backend/internal/middleware/: middleware.go
backend/internal/models/: device.go  forwarding_rule.go  message_log.go  user.go
backend/internal/repository/: device_repository.go  log_repository.go  rule_repository.go  user_repository.go
backend/internal/services/: device_service.go  log_service.go  rule_service.go  user_service.go
backend/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
docs/: BEADS.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
plans/: tinghook-mvp.md
(+134 files in other folders)
